@@ -12,11 +12,15 @@ bin_PROGRAMS = gupnp-universal-cp gupnp-network-light
 gupnp_universal_cp_SOURCES = universal-cp.c \
 			     universal-cp-gui.c \
 			     universal-cp-devicetreeview.c \
+			     universal-cp-detailstreeview.c \
+			     universal-cp-eventtreeview.c \
 			     universal-cp-actiondialog.c \
 			     universal-cp-icons.c \
 			     universal-cp.h \
 			     universal-cp-gui.h \
 			     universal-cp-devicetreeview.h \
+			     universal-cp-detailstreeview.h \
+			     universal-cp-eventtreeview.h \
 			     universal-cp-actiondialog.h \
 			     universal-cp-icons.h
 gupnp_universal_cp_LDADD = $(LIBGLADE_LIBS) $(LIBGUPNP_LIBS)
