@@ -1,0 +1,63 @@
+/*
+ * Copyright (C) 2007 Zeeshan Ali <zeenix@gstreamer.net>
+ *
+ * Authors: Zeeshan Ali <zeenix@gstreamer.net>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along
+ * with this program; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+ */
+
+#include <string.h>
+#include <stdlib.h>
+#include <config.h>
+
+#include "universal-cp-detailstreeview.h"
+#include "universal-cp-gui.h"
+
+void
+update_details (const char **tuples)
+{
+        GtkWidget    *treeview;
+        GtkTreeModel *model;
+        const char  **tuple;
+
+        treeview = glade_xml_get_widget (glade_xml, "details-treeview");
+        g_assert (treeview != NULL);
+        model = gtk_tree_view_get_model (GTK_TREE_VIEW (treeview));
+        gtk_list_store_clear (GTK_LIST_STORE (model));
+
+        for (tuple = tuples; *tuple; tuple = tuple + 2) {
+                if (*(tuples + 1) == NULL)
+                        continue;
+
+                gtk_list_store_insert_with_values (
+                                GTK_LIST_STORE (model),
+                                NULL, -1,
+                                0, *tuple,
+                                1, *(tuple + 1), -1);
+        }
+}
+
+GtkTreeModel *
+create_details_treemodel (void)
+{
+        GtkListStore *store;
+
+        store = gtk_list_store_new (2,
+                                    G_TYPE_STRING,  /* Name */
+                                    G_TYPE_STRING); /* Value */
+
+        return GTK_TREE_MODEL (store);
+}
+
